js/js.translator/testData/incremental/invalidation/renameModuleWithCrossModuleInliner/lib1/l1.4.kt
inline fun foo() = 4
